@@ -8,6 +8,9 @@
 
   * Add support for observation weights to LinearRegression.
 
+  * MahalanobisDistance<> now takes root of the distance by default and
+    therefore satisfies the triangle inequality (TakeRoot now defaults to true).
+
 2014-08-29    mlpack 1.0.10
 
   * Bugfix for NeighborSearch regression which caused very slow allknn/allkfn.
